--- a/index.css
+++ b/index.css
@@ -1,1 +1,140 @@
 /* Main stylesheet */
+/* dark mode */
+html.dark {
+  --title: #fff;
+}
+/* light mode */
+html {
+  --body: rgba(25, 25, 27, 255);
+  --text: #e6e8ed;
+  --main-color: rgb(194, 194, 12);
+  --border-color: #313335;
+  --section: #242427;
+  --hover: #303130;
+}
+* {
+  margin: 0;
+  box-sizing: border-box;
+  color: inherit;
+}
+body {
+  background: var(--body);
+  font-family: sans-serif;
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  overflow: auto;
+  color: var(--text);
+}
+/* main navigation bar styling */
+.main-nav {
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  border-right: 2px solid var(--border-color);
+  overflow: auto;
+}
+.main-nav::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+.main-nav .links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 20px;
+}
+/* Main content styles */
+main {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 100px;
+  /* border-left: 1px solid red; */
+}
+.section {
+  width: 100%;
+  background: var(--section);
+  border-radius: 10px;
+}
+/* home secton  */
+.home {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+}
+.home h2 {
+  text-transform: uppercase;
+}
+/* carrousel */
+.carrousel-container {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  height: 100%;
+}
+.carrousel {
+  overflow: auto;
+  height: 650px;
+  width: 100%;
+  display: flex;
+  position: relative;
+}
+
+.carrousel-card {
+  opacity: 0;
+  visibility: hidden;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  border-radius: 10px;
+  overflow: hidden;
+  transition: opacity 0.4s, visibility 0.4s;
+  display: block;
+}
+.carrousel-card.is-active {
+  opacity: 1;
+  visibility: visible;
+}
+.carrousel-card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  filter: brightness(0.5);
+}
+.carrousel-card .text_slide {
+  position: absolute;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  left: 25%;
+  top: 0;
+  width: 50%;
+  height: 100%;
+  gap: 30px;
+  z-index: 5;
+}
+.carrousel-container .buttons_slide {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 2;
+  padding: 0 20px;
+}
+.home *::selection {
+  background: none;
+}
