--- a/style.css
+++ b/style.css
@@ -103,9 +103,20 @@ img {
 .carousel .slide {
   width: 100%;
   height: 100%;
+  position: relative;
+}
+.carousel .text{
+  position: absolute;
+  top: 50%;
+  left: 10%;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.carousel .slide * {
+.carousel .slide img{
   width: 100%;
   height: 100%;
 }
