--- a/index.css
+++ b/index.css
@@ -32,6 +32,7 @@ body {
 a {
   color: var(--link-color);
   text-decoration: none;
+  transition: all 0.3s;
 }
 
 a:hover {
@@ -47,6 +48,7 @@ img {
   max-width: 100%;
   object-fit: cover;
   display: block;
+  border-radius: 0.5rem;
 }
 
 img::selection {
@@ -56,11 +58,33 @@ img::selection {
 p {
   text-align: justify;
   line-height: 1.6;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
+}
+
+
+progress {
+  width: 100%;
+  height: 1rem;
+  background-color: var(--primary-a);
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+
+progress::-webkit-progress-bar {
+  background-color: var(--primary-a);
+}
+
+progress::-webkit-progress-value {
+  background-color: var(--third);
+}
+
+progress::-moz-progress-bar {
+  background-color: var(--third);
 }
 
 section {
   margin-bottom: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 /*------------------------ utilites ---------------------*/
@@ -75,7 +99,6 @@ section {
 
 .article {
   margin: 1.5rem 0;
-  background-color: var(--primary-a);
 }
 
 .btn {
@@ -202,8 +225,43 @@ section {
 }
 
 /* ------------Introduccion-------------- */
-.grid {
+.article.grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 2rem;
+}
+
+.grid .social{
+  display: flex;
+  flex-direction: column;
   gap: 1rem;
+  padding-bottom: 1rem;
+}
+.social img{
+  max-height: 400px;
+}
+.social .icons{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  font-size: 1.5rem;
+}
+
+.social .icons a:hover{
+  color: var(--black);
+  transform: scale(1.5);
+}
+
+
+.progress {
+  margin: 1rem auto;
+}
+
+.progress > p {
+  margin: 0;
+  font-size: 0.85rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
