--- a/index.css
+++ b/index.css
@@ -238,7 +238,7 @@ section {
   padding-bottom: 1rem;
 }
 .social img{
-  max-height: 400px;
+  height: 400px;
 }
 .social .icons{
   display: flex;
