--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
   --black: #111;
   --primary: #fefeff;
   --primary-a: #f9f8fa;
-  --third: rgb(223, 182, 50);
+  --third: rgb(50, 62, 223);
   --link-color: royalblue;
   --font: sans-serif;
   scroll-behavior: smooth;
@@ -39,10 +39,9 @@ a:hover {
   opacity: 0.8;
 }
 
-h2{
+h2 {
   font-size: 2rem;
 }
-
 
 img {
   max-width: 100%;
@@ -60,7 +59,6 @@ p {
   line-height: 1.6;
   font-size: 1.3rem;
 }
-
 
 progress {
   width: 100%;
@@ -109,7 +107,7 @@ section {
 }
 
 .btn:hover {
-  opacity: 0.8;
+  opacity: 0.9;
 }
 
 .btn:active {
@@ -129,6 +127,10 @@ section {
   align-items: center;
 }
 
+.mb-2 {
+  margin-bottom: 2rem;
+}
+
 .title {
   text-align: center;
   letter-spacing: 0.2rem;
@@ -140,12 +142,11 @@ section {
   background-color: var(--third);
   position: absolute;
   height: 0.2rem;
-  bottom: -0.5rem;
+  bottom: -0.3rem;
   left: 0;
   right: 0;
   width: 5rem;
-  margin: auto;
-  transition: width 0.5s;
+  margin: 1rem auto 0;
 }
 
 .txt-center {
@@ -168,7 +169,7 @@ section {
 }
 
 .header .container figure {
-  font-size: 1.55rem;
+  font-size: 1rem;
   gap: 0.5rem;
 }
 
@@ -231,16 +232,16 @@ section {
   gap: 2rem;
 }
 
-.grid .social{
+.grid .social {
   display: flex;
   flex-direction: column;
   gap: 1rem;
   padding-bottom: 1rem;
 }
-.social img{
+.social img {
   height: 400px;
 }
-.social .icons{
+.social .icons {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -248,11 +249,10 @@ section {
   font-size: 1.5rem;
 }
 
-.social .icons a:hover{
+.social .icons a:hover {
   color: var(--black);
   transform: scale(1.5);
 }
-
 
 .progress {
   margin: 1rem auto;
@@ -265,3 +265,14 @@ section {
   justify-content: space-between;
   align-items: center;
 }
+
+a.btn {
+  background: var(--link-color);
+  color: var(--primary);
+  padding: 1rem;
+  display: inline-block;
+  border-radius: 1rem;
+  text-align: center;
+}
+
+/*---------------------------------- nav */
