--- a/index.css
+++ b/index.css
@@ -1,20 +1,31 @@
 :root {
-  --black: #111;
-  --white: rgba(255, 255, 255, 0.945);
-  --white-a: rgba(218, 218, 218, 0.563);
-  --primary: #ffe62bc2;
-  --primary-a: #e6d555;
-  --complementary: #ce2bff;
-  --complementary-a: #c455e6;
-  --third: #2bffe6;
-  --third-a: #55e6d5;
-  --link-color: royalblue;
-  --font-family: "Open Sans", sans-serif;
-  scroll-behavior: smooth;
+  --bg-color: #ffffff;
+  --text-color: #313130;
+  --hover-color: #f7f4f3;
+  --header-bg-color: #f7f4f3;
+  --decorative-bg-color: #5f7fdf;
+  --primary: rgb(209, 209, 33);
+  --font-family: "Open sans", sans-serif;
+  --sidebar-w: 18%; /* ancho del sidebar en desktop */
+  --header-height: 4rem;
+  --box-shadow: #f7f4f3 2.4px 2.4px 3.2px;
+  --box-shadow-header: #d9d6d5 0 4px 0;
+}
+:root.dark {
+  --bg-color: #232529;
+  --text-color: #e2e3e7;
+  --hover-color: #292c31;
+  --header-bg-color: #292c31;
+  --box-shadow: #35383f 2.4px 2.4px 3.2px;
+  --box-shadow-header: #35383f 0 4px 0;
+}
+
+::-webkit-scrollbar {
+  width: 0;
 }
 
 ::selection {
-  background-color: var(--third-a);
+  background-color: var(--decorative-bg-color);
 }
 
 *,
@@ -27,13 +38,15 @@
 /*------------------------ TAGS ---------------------*/
 
 html {
-  font-family: var(--font-family);
-  font-size: 15px;
+  font-size: 16px;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
-  background-color: var(--white);
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  font-family: var(--font-family);
 }
 
 a {
@@ -48,231 +61,202 @@ a:hover {
 
 img {
   max-width: 100%;
-  object-fit: cover;
+  height: auto;
   display: block;
   border-radius: 0.5rem;
 }
-
 img::selection {
   background: none;
 }
 
 p {
   text-align: justify;
-  line-height: 1.1;
-  font-size: 1.1rem;
+  font-size: var(--step-0);
 }
 
-section {
-  margin-bottom: 1rem;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
 progress {
   width: 100%;
-  height: 1rem;
-  background-color: var(--white-a);
+  background-color: var(--background-color);
   border-radius: 0.5rem;
   overflow: hidden;
 }
 
 progress::-webkit-progress-bar {
-  background-color: var(--white-a);
+  background-color: var(--background-color);
 }
 
 progress::-webkit-progress-value {
   background-color: var(--primary);
 }
-
-progress::-moz-progress-bar {
-  background-color: var(--primary);
+:is(h1, h2, h3, h4, h5, h6) {
+  color: var(--text-color);
 }
 
-body {
-  min-height: 100vh;
+:is(span[id])::selection{
+  background-color: transparent;
 }
-
-body > .left,
-body > .right {
-  padding: 1rem 0.5rem 0;
+/*--------- main styles ---------*/
+/*--------- body layout ---------*/
+body > .header {
   width: 100%;
-}
-body > .right::-webkit-scrollbar {
-  width: 0;
-}
-
-body > .left {
-  background-color: var(--black);
-  display: grid;
-  grid-template-columns: 100%;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  position: fixed;
-  left: 0;
-  height: 100vh;
-  width: calc(100vw - 76%);
-  transition: all 0.5s;
-  overflow: hidden;
-}
-
-.left.active {
-  left: -100%;
-}
-
-body > .right {
-  margin-left: calc(100vw - 76%);
-  width: calc(100vw - 27%);
-  transition: all 0.5s;
-}
-
-.right.active {
-  margin-left: 0;
-  width: 98vw;
-}
-.left .h1,
-.left .primary-link{
-  color: var(--white);
-  font-size: 2rem;
-  display: flex;
-  align-items: center;
+  height: var(--header-height);
+  background-color: var(--bg-color);
+  box-shadow: var(--box-shadow-header);
   position: relative;
-  margin-left: 0.5rem;
-  transition: transform 0.4s;
-}
-.left .h1 {
-  border-bottom: 1px solid var(--white);
-}
-.left .primary-link::before {
-  position: absolute;
-  content: "";
-  height: 20%;
-  width: 3px;
-  background-color: var(--primary);
-  left: -0.5rem;
+  z-index: 2;
 }
 
-.left .primary-link:hover, .left .active{
-  transform: translateX(20%);
-}
-
-@media screen and (max-width: 1300px) {
-  .left .h2,
-  .h1 {
-    font-size: 1.7rem;
-  }
-}
-
-#menu-btn {
-  display: block;
-  box-sizing: content-box;
-  position: sticky;
-  top: 1rem;
-  left: 1rem;
-  width: 2rem;
-  height: 2rem;
-  padding: 0.5rem;
-  margin-bottom: 1rem;
-  font-size: 2rem;
-  text-align: center;
-  cursor: pointer;
-  background-color: rgb(235, 235, 235);
-  border-radius: 2rem;
-}
-
-#menu-btn i {
-  display: block;
-}
-
-i.derecha {
-  transform: scaleX(-1);
-}
-
-/* Introduction */
-
-.popover-content {
-  position: absolute;
-  background-color: var(--white);
-  color: var(--black);
-  border-radius: 0.5rem;
-  padding: 0.5rem;
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-  z-index: 1;
-}
-
-.popover-wrapper:hover .popover-content {
-  opacity: 1;
-  visibility: visible;
-}
-
-.collapse-btn {
-  border: 1px solid var(--black);
-  width: 2rem;
-  height: 2rem;
-  position: relative;
-}
-
-.collapse-btn > *::selection {
-  background: none;
-}
-
-.collapse-btn .popover-content {
-  top: 2rem;
-  background-color: var(--black);
-  color: var(--white);
-}
-
-.collapse-btn:hover > .popover-content {
-  visibility: visible;
-  opacity: 1;
-}
-
-.article.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  gap: 2rem;
-}
-
-.grid .social {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  padding-bottom: 1rem;
-}
-
-.social img {
-  height: 400px;
-}
-
-.social .icons {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
-  font-size: 1.5rem;
-}
-
-.social .icons a:hover {
-  color: var(--black);
-  transform: scale(1.5);
-}
-
-.progress {
-  margin: 1rem auto;
-}
-
-.progress > p {
-  margin: 0;
-  font-size: 0.85rem;
+.header > .nav {
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0.5rem 1rem;
+}
+body > .left {
+  width: var(--sidebar-w);
+  /* height: calc(100vh - var(--header-height)); */
+  height: 100vh;
+  /* margin-top: var(--header-height); */
+  position: sticky;
+  transform: translateX(-100%);
+  top: 0;
+  left: 0;
+  background-color: var(--header-bg-color);
+  box-shadow: var(--box-shadow);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: max(1rem, 3vw);
+  overflow: hidden;
+  /* z-index: -1; */
+  transition: transform 0.3s;
 }
 
-a.btn {
-  background: var(--link-color);
-  color: var(--primary);
-  padding: 1rem;
-  display: inline-block;
-  border-radius: 1rem;
-  text-align: center;
+body > .left.is-visible {
+  transform: translateX(0);
+}
+#menu-btn {
+  transform: rotate(180deg);
+}
+#menu-btn.is-visible {
+  transform: rotate(0deg);
+}
+.left .primary-link {
+  color: var(--text-color);
+  position: relative;
+  border-bottom-style: solid;
+  border-bottom-width: 0.2rem;
+  border-bottom-color: transparent;
+  font-size: var(--step-0);
+}
+.primary-link::before {
+  content: "";
+  width: 0.2rem;
+  height: 100%;
+  background-color: var(--primary);
+  position: absolute;
+  top: 0;
+  left: -1rem;
+}
+.primary-link.active {
+  border-bottom-color: var(--primary);
+}
+.primary-link.active::before {
+  display: none;
+}
+
+body > .right.is-visible {
+  width: calc(100% - var(--sidebar-w));
+  margin-left: var(--sidebar-w);
+}
+
+body > .right {
+  width: 100%;
+  margin: auto;
+  transition: all 0.3s;
+}
+
+@media screen and (max-width: 968px) {
+  body > .left {
+    position: static;
+    width: 100%;
+    height: auto;
+    gap: 1rem;
+    margin-bottom: 1rem;
+    margin-top: 0;
+    transform: translateY(-100%);
+    position: absolute;
+  }
+
+  body > .left.is-visible {
+    transform: translateY(0);
+    position: static;
+  }
+  .left .primary-link {
+    margin-left: 1rem;
+  }
+  body > :is(.right, .right.is-visible) {
+    width: 100%;
+    margin-left: 0;
+  }
+  #menu-btn {
+    transform: rotate(270deg);
+  }
+  #menu-btn.is-visible {
+    transform: rotate(90deg);
+  }
+}
+
+.nav span[id] {
+  cursor: pointer;
+  position: relative;
+}
+
+.nav span[id]:hover::before {
+  opacity: 1;
+  visibility: visible;
+}
+
+#darkmode-btn::before {
+  content: "Change theme";
+}
+
+.nav span[id]::before {
+  position: absolute;
+  top: 0;
+  left: -8rem;
+  padding-inline: 0.5rem;
+  background-color: var(--text-color);
+  color: var(--hover-color);
+  border-radius: 0.5rem;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.5s;
+  font-size: var(--step--1);
+}
+#language-btn::before {
+  content: "Change language";
+  left: -9rem;
+}
+#scrollUp-btn {
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+  background-color: var(--header-bg-color);
+  width: 2.5rem;
+  height: 2.5rem;
+  display: none;
+  box-sizing: content-box;
+  border-radius: 50%;
+  box-shadow: var(--box-shadow) inset;
+}
+
+@media screen and (max-width: 768px) {
+  #scrollUp-btn {
+    display: grid;
+    place-content: center;
+  }
 }
