--- a/css/styleGeneric.css
+++ b/css/styleGeneric.css
@@ -2,13 +2,62 @@
 :root {
   /* Font sizes  from https://utopia.fyi/type/calculator/?c=320,21,1.2,1300,24,1.25,5,2,&s=0.75%7C0.5%7C0.25,1.5%7C2%7C3%7C4%7C6,s-l*/
   --step--2: clamp(0.64rem, 0.66rem + -0.11vw, 0.58rem);
-  --step--1: clamp(0.80rem, 0.77rem + 0.15vw, 0.88rem);
-  --step-0: clamp(1.00rem, 0.88rem + 0.61vw, 1.31rem);
-  --step-1: clamp(1.25rem, 0.97rem + 1.40vw, 1.97rem);
+  --step--1: clamp(0.8rem, 0.77rem + 0.15vw, 0.88rem);
+  --step-0: clamp(1rem, 0.88rem + 0.61vw, 1.31rem);
+  --step-1: clamp(1.25rem, 0.97rem + 1.4vw, 1.97rem);
   --step-2: clamp(1.56rem, 1.02rem + 2.71vw, 2.95rem);
   --step-3: clamp(1.95rem, 0.99rem + 4.83vw, 4.43rem);
-  --step-4: clamp(2.44rem, 0.80rem + 8.20vw, 6.64rem);
+  --step-4: clamp(2.44rem, 0.8rem + 8.2vw, 6.64rem);
   --step-5: clamp(3.05rem, 0.35rem + 13.49vw, 9.97rem);
+}
+
+/* RESET CSS */
+
+*,
+::after,
+::before {
+  box-sizing: inherit;
+  margin: 0;
+}
+a {
+  color: var(--link-color);
+  text-decoration: none;
+  transition: opacity 0.3s;
+  display: block;
+}
+p a {
+  display: inline-block;
+}
+a:hover {
+  opacity: 0.8;
+}
+i {
+  cursor: pointer;
+}
+p {
+  text-align: justify;
+  /* font-size: var(--step-0); */
+  font-size: 1rem;
+}
+h1 {
+  /* font-size: var(--step-1); */
+  font-size: 2rem;
+}
+h5 {
+  font-size: 0.9rem;
+}
+h6 {
+  font-size: 0.9rem;
+  font-weight: 400;
+}
+:is(img, video, picture, iframe, figure) {
+  max-width: 100%;
+  width: 100%;
+  display: block;
+  object-fit: cover; /*opcional*/
+}
+:is(img, video, picture, iframe, figure)::selection {
+  background: none;
 }
 .s--2 {
   font-size: var(--step--2);
@@ -48,8 +97,7 @@
   margin: auto;
 }
 .article {
-  margin: 1.5rem 0;
-  padding: 1rem;
+  padding-left: 0.5rem;
   width: 100%;
   height: auto;
 }
@@ -79,11 +127,13 @@
 .oa {
   overflow: auto;
 }
-.contenido-textual, .contenido-textual *{
+.contenido-textual,
+.contenido-textual * {
   font-size: var(--step-0);
 }
 .math {
-  letter-spacing: 0.2rem;
+  font-family: "Courier New", Courier, monospace;
+  font-weight: bold;
 }
 .pre {
   white-space: pre;
@@ -94,11 +144,6 @@
   margin-left: 1rem;
   margin-bottom: 1rem;
 }
-
-.bg-success {
-  background-color: greenyellow;
-}
-
-.font-color{
-  color: var(--text-color);
+.pointer {
+  cursor: pointer;
 }
