--- a/css/index.css
+++ b/css/index.css
@@ -100,7 +100,7 @@ html {
   justify-content: center;
   flex-direction: column;
   gap: 1rem;
-  margin-top: 2rem;
+  margin: auto 0;
   position: relative;
 }
 .sidebar .links a {
