--- a/css/index.css
+++ b/css/index.css
@@ -7,10 +7,9 @@
   --primary: rgb(209, 209, 33);
   --font-family: "Poppins", sans-serif;
   --box-shadow: #f7f4f3 2.4px 2.4px 3.2px;
-  --box-shadow-header: #d9d6d5 0 4px 0;
+
   --sidebar-width: 4.688rem;
   --sidebar-active-width: 18rem;
-  --header-height: 3.5rem;
 }
 :root.dark {
   --sidebar-bg: #292c31;
@@ -18,7 +17,6 @@
   --text-color: #e2e3e7;
   --hover-color: #292c31;
   --box-shadow: #35383f 2.4px 2.4px 3.2px;
-  --box-shadow-header: #35383f 0 4px 0;
 }
 
 ::-webkit-scrollbar {
@@ -28,7 +26,6 @@
 ::selection {
   background-color: var(--link-color);
 }
-
 
 /*------------------------ TAGS ---------------------*/
 
@@ -44,38 +41,13 @@ html {
   font-family: var(--font-family);
 }
 
-/* ---------- Header ----------*/
-.header {
-  width: 100%;
-  height: var(--header-height);
-  box-shadow: var(--box-shadow-header);
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 10;
-  background-color: var(--bg-color);
-}
-.header i {
-  cursor: pointer;
-  background-color: var(--hover-color);
-  padding: 0.4rem;
-  border-radius: 50%;
-  transform: scale(1);
-  transition: transfrom 0.4s;
-}
-.header i:active {
-  transform: scale(0.8);
-}
 /* ---------- Sidebar ----------*/
 .sidebar {
   background-color: var(--sidebar-bg);
   width: var(--sidebar-width);
   height: 100vh;
   position: fixed;
-  top: calc(var(--header-height) + 4px);
+  top: 0;
   left: 0;
   transition: width 0.4s;
   padding: 1rem 0 0 0.5rem;
@@ -153,7 +125,7 @@ html {
   right: 1rem;
 }
 /* scroll up btn */
-.fas.fa-chevron-up{
+.fas.fa-chevron-up {
   position: fixed;
   bottom: 1rem;
   right: 1rem;
@@ -162,7 +134,7 @@ html {
   border-radius: 50%;
   display: none;
 }
-.fas.fa-chevron-up.active{
+.fas.fa-chevron-up.active {
   display: block;
 }
 
@@ -170,7 +142,6 @@ html {
 main {
   padding: 1rem;
   margin-left: var(--sidebar-width);
-  margin-top: var(--header-height);
   transition: margin 0.4s;
 }
 
@@ -184,23 +155,24 @@ main {
     width: 100%;
     height: auto;
     position: static;
-    margin-top: calc(var(--header-height) + 4px);
     padding: 0 1rem 1rem;
   }
-  .sidebar > i, .sidebar.active > i{
-    display: none;  
+  .sidebar > i,
+  .sidebar.active > i {
+    display: none;
   }
-  .sidebar .links a, .sidebar.active .links a {
+  .sidebar .links a,
+  .sidebar.active .links a {
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
   }
   .sidebar.active .github :is(.text, img),
-  .sidebar .github :is(.text, img){
-   display: none;
+  .sidebar .github :is(.text, img) {
+    display: none;
   }
   .sidebar .github a,
-  .sidebar.active .github a{
+  .sidebar.active .github a {
     display: none;
   }
   main,
